Dev Org/src/objects/Page_Section__c.object
<CustomObject>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Page-Sections</relationshipLabel>
        <relationshipName>Page_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Page</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipLabel>Page-Sections</relationshipLabel>
        <relationshipName>Page_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root</label>
        <referenceTo>Page_Section__c</referenceTo>
        <relationshipLabel>Page-Sections</relationshipLabel>
        <relationshipName>Page_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Page-Sections</relationshipLabel>
        <relationshipName>Page_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Page-Section</label>
    <nameField>
        <label>Page-Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page-Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>